Cambios realizados en proyecto

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 /PruebaProyecto/build/
 /PruebaProyecto/dist/
 /IMC Calculator/nbproject/private/
+/IMC Calc/nbproject/private/
+/IMC Calc/build/
+/IMC Calc/dist/
